--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "collections": "~5.1.x"
   },
   "devDependencies": {
-    "jasmine-node": "~1.7.0",
     "cover": "*",
-    "opener": "*",
+    "jasmine-node": "^3.0.0",
     "mocha": "~1.11.0",
-    "mocha-as-promised": "~1.4.0"
+    "mocha-as-promised": "~1.4.0",
+    "opener": "*"
   },
   "scripts": {
     "test": "jasmine-node spec",
